Revamp About Us and Campus Tour pages
Expanded and redesigned the About Us page with detailed sections for school ideals, mission, vision, facilities, governance, student support, and contact information. Added SEO meta tags, structured data, and improved layout with enhanced styling and localization. Updated Campus Tour page to use client-side rendering, dynamic translation, and improved facility descriptions for both Bangla and English.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -287,7 +287,7 @@
   "about": {
     "title": "সূর্যমুখী কিন্ডারগার্টেন সম্পর্কে",
     "subtitle": "২০০৪ সালে প্রতিষ্ঠিত একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান, সৃজনশীল ও নৈতিক শিক্ষার মাধ্যমে সামগ্রিক উন্নয়নে প্রতিশ্রুতিবদ্ধ।",
-    "description": "সূর্যমুখী কিন্ডারগার্টেন একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান যা ০১-০১-২০০৪ তারিখে প্রতিষ্ঠিত হয় এবং সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০ এ অবস্থিত। স্কুলটি নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত বাংলা মাধ্যমে শিক্ষা প্রদান করে এবং সৃজনশীল ও নৈতিক শিক্ষার মাধ্যমে শিক্ষার্থীদের সামগ্রিক উন্নয়নে কাজ করে।",
+    "description": "সূর্যমুখী কিন্ডারগার্টেন একটি বেসরকারি প্রাথমিক শিক্ষা প্রতিষ্ঠান যা ০১-০১-২০০৪ তারিখে প্রতিষ্ঠিত হয় এবং সালাউদ্দিন কমপ্লেক্স, আওনা বাজার, নবাবগঞ্জ, ঢাকা-১৩২০ এ অবস্থিত। স্কুলটি প্লে গ্রুপ থেকে ৫ম শ্রেণী পর্যন্ত বাংলা মাধ্যমে শিক্ষা প্রদান করে এবং সৃজনশীল ও নৈতিক শিক্ষার মাধ্যমে শিক্ষার্থীদের সামগ্রিক উন্নয়নে কাজ করে।",
     "ideals": {
       "title": "আমাদের আদর্শ",
       "items": [
@@ -300,16 +300,31 @@
     "mission": {
       "title": "আমাদের লক্ষ্য",
       "items": [
-        "মানুষের দোরগোড়ায় আধুনিক শিক্ষা পৌঁছে দেওয়া",
-        "শিক্ষার্থীদের সৃজনশীলতা, নৈতিক চরিত্র এবং মানবিক মূল্যবোধ লালন করা",
-        "সাহিত্য, সংস্কৃতি এবং খেলাধুলার মাধ্যমে একটি ব্যাপক শিক্ষার পরিবেশ তৈরি করা"
+        "আধুনিক, মূল্যবোধভিত্তিক, সাংস্কৃতিকভাবে প্রোথিত শিক্ষা নিশ্চিত করা",
+        "সৃজনশীলতা, নৈতিক চরিত্র এবং নাগরিক মূল্যবোধ বিকাশ করা",
+        "খেলাধুলা এবং সাংস্কৃতিক চর্চাকে শিক্ষার অবিচ্ছেদ্য অংশ হিসেবে প্রসার করা",
+        "স্থানীয় বাসিন্দাদের দোরগোড়ায় আধুনিক শিক্ষা পৌঁছে দেওয়া",
+        "শিক্ষার্থীদের সৃজনশীল মানবিক চরিত্র গঠন করা এবং সুপ্ত প্রতিভা বিকাশ করা"
       ]
     },
     "vision": {
       "title": "আমাদের দৃষ্টিভঙ্গি",
       "items": [
-        "একটি নির্ভরযোগ্য এবং আদর্শ স্থানীয় প্রতিষ্ঠান হয়ে ওঠা",
-        "সুবিধাবঞ্চিত গোষ্ঠীর অংশগ্রহণ নিশ্চিত করা এবং মেধাবী অভাবী শিক্ষার্থীদের সহায়তা করা"
+        "সৃজনশীল শিক্ষার মাধ্যমে একটি প্রগতিশীল সমাজ গঠন করা",
+        "একটি নির্ভরযোগ্য এবং আদর্শ স্থানীয় শিক্ষা প্রতিষ্ঠান হয়ে ওঠা",
+        "সুবিধাবঞ্চিত গোষ্ঠীর অংশগ্রহণ নিশ্চিত করা এবং মেধাবী অভাবী শিক্ষার্থীদের সহায়তা করা",
+        "প্রতিষ্ঠার আদর্শ দ্বারা পরিচালিত একটি অগ্রণী স্থানীয় বিদ্যালয়ে পরিণত হওয়া"
+      ]
+    },
+    "objectives": {
+      "title": "আমাদের উদ্দেশ্য",
+      "items": [
+        "স্থানীয় বাসিন্দাদের দোরগোড়ায় আধুনিক শিক্ষা পৌঁছে দেওয়া এবং উন্নত শিক্ষা বিস্তার করা",
+        "শিক্ষার্থীদের সৃজনশীল মানবিক চরিত্র গঠন করা এবং সুপ্ত প্রতিভা বিকাশ করা",
+        "স্বাধীন চিন্তাভাবনা, সাংস্কৃতিক চর্চা এবং খেলাধুলায় উৎসাহ প্রদান করা",
+        "নৈতিক ও মানবিক মূল্যবোধের শিক্ষা প্রদান করা এবং জ্ঞানভিত্তিক জাতি গঠন করা",
+        "বিদ্যালয়ের বাইরের জনগোষ্ঠীর মধ্যে সচেতনতা বৃদ্ধি করা",
+        "সুবিধাবঞ্চিত পরিবারের মধ্যে মানসম্পন্ন শিক্ষা বিস্তার করা"
       ]
     },
     "history": {
@@ -317,7 +332,7 @@
       "subtitle": "২০০৪ সাল থেকে শিক্ষাগত উৎকর্ষতার যাত্রা।",
       "founded": {
         "title": "২০০৪ সালে প্রতিষ্ঠিত",
-        "description": "সূর্যমুখী কিন্ডারগার্টেন ১ জানুয়ারি, ২০০৪ তারিখে প্রতিষ্ঠিত হয়, নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদানের অঙ্গীকার নিয়ে।"
+        "description": "সূর্যমুখী কিন্ডারগার্টেন ১ জানুয়ারি, ২০০৪ তারিখে প্রতিষ্ঠিত হয়, প্লে গ্রুপ থেকে ৫ম শ্রেণী পর্যন্ত মানসম্পন্ন বাংলা মাধ্যম শিক্ষা প্রদানের অঙ্গীকার নিয়ে।"
       },
       "growth": {
         "title": "ক্রমাগত উন্নয়ন",
@@ -326,7 +341,7 @@
     },
     "academics": {
       "title": "শিক্ষাক্রম",
-      "description": "নার্সারি থেকে ৫ম শ্রেণী পর্যন্ত বাংলা মাধ্যমে শিক্ষা প্রদান করা হয়। শ্রেণীভিত্তিক শিক্ষার্থী সংখ্যা যথাযথ কাঠামোর সাথে বজায় রাখা হয়।",
+      "description": "প্লে গ্রুপ থেকে ৫ম শ্রেণী পর্যন্ত বাংলা মাধ্যমে শিক্ষা প্রদান করা হয়। শ্রেণীভিত্তিক শিক্ষার্থী সংখ্যা যথাযথ কাঠামোর সাথে বজায় রাখা হয়।",
       "details": [
         "প্রাক-প্রাথমিক: ৩০ জন শিক্ষার্থী",
         "১ম শ্রেণী: ২৫ জন শিক্ষার্থী",
