Add founder image and update contact email
Added SheikhImranMahmud.png for the founder's profile and updated the founders page to display this image instead of an emoji. Also updated the founder's contact email in both Bengali and English locale files. Removed the 'About the Institution' section from the founders page.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -486,7 +486,7 @@
           "vision": "একটি শিক্ষা প্রতিষ্ঠান গড়ে তোলা যা মানসম্পন্ন শিক্ষার মাধ্যমে জাতির মেরুদণ্ড হিসেবে কাজ করবে, সম্প্রদায়ে শান্তি, ঐক্য ও অগ্রগতি বৃদ্ধি করবে।",
           "contact": {
             "mobile": "০১৮১৯১৯৮৯৬৫",
-            "email": "surjamukhikindergarten@gmail.com",
+            "email": "imransirkp@gmail.com",
             "website": "www.surjamukhikindergarten.com"
           }
         }
