--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -453,7 +453,7 @@
           "vision": "To create an educational institution that serves as the backbone of the nation through quality education, fostering peace, unity, and progress in the community.",
           "contact": {
             "mobile": "01819198965",
-            "email": "surjamukhikindergarten@gmail.com",
+            "email": "imransirkp@gmail.com",
             "website": "www.surjamukhikindergarten.com"
           }
         }
