Add Bengali i18n support to teachers page and cards
Refactored the teachers page and SimpleTeacherCard component to use the language context and translation function for all user-facing strings. Added a language toggle to the teachers page and updated bn.json with Bengali translations for all relevant keys. This enables seamless switching between English and Bengali for the teachers section.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -131,6 +131,43 @@
     "checkBackSoon": "আমাদের অসাধারণ শিক্ষকদের সাথে পরিচিত হতে শীঘ্রই ফিরে আসুন!",
     "loading": "আমাদের অসাধারণ শিক্ষকদের লোড করা হচ্ছে..."
   },
+  "teachersPage": {
+    "heroTitle": "আমাদের নিবেদিতপ্রাণ শিক্ষকবৃন্দ",
+    "heroSubtitle": "আমাদের যোগ্য ও আবেগপ্রবণ শিক্ষাবিদদের সাথে পরিচিত হন যারা আপনার সন্তানের বৃদ্ধি ও বিকাশে নিবেদিত।",
+    "expertTeachers": "বিশেষজ্ঞ শিক্ষক",
+    "avgExperience": "গড় বছরের অভিজ্ঞতা",
+    "subjectAreas": "বিষয়ের ক্ষেত্র",
+    "facultyTitle": "অভিজ্ঞ ও যোগ্য অনুষদ",
+    "facultyDescription": "আমাদের শিক্ষকগণ তাদের দক্ষতা, অভিজ্ঞতা এবং প্রাথমিক শিক্ষার প্রতি আবেগের জন্য সাবধানে নির্বাচিত। প্রত্যেকে আমাদের শিক্ষার্থীদের জন্য সর্বোত্তম শিক্ষার পরিবেশ তৈরিতে অনন্য দক্ষতা ও নিবেদন নিয়ে আসেন।",
+    "expertEducators": "বিশেষজ্ঞ শিক্ষাবিদ",
+    "advancedQualifications": "উন্নত যোগ্যতা",
+    "certifiedSpecialists": "প্রত্যয়িত বিশেষজ্ঞ",
+    "diverseSubjects": "বিবিধ বিষয়ের ক্ষেত্র",
+    "philosophyTitle": "আমাদের শিক্ষাদর্শন",
+    "philosophySubtitle": "আমাদের শিক্ষকরা প্রাথমিক শিক্ষায় উৎকর্ষতার জন্য একটি সাধারণ অঙ্গীকার ভাগ করে নেন।",
+    "nurturingCare": "লালনশীল যত্ন",
+    "nurturingCareDesc": "একটি প্রেমময় ও সহায়ক পরিবেশ তৈরি করা",
+    "individualFocus": "ব্যক্তিগত মনোযোগ",
+    "individualFocusDesc": "প্রতিটি শিশুর অনন্য চাহিদা ও সম্ভাবনা স্বীকার করা",
+    "growthMindset": "বৃদ্ধির মানসিকতা",
+    "growthMindsetDesc": "ক্রমাগত শিক্ষা ও উন্নয়নে উৎসাহ প্রদান",
+    "partnership": "অংশীদারিত্ব",
+    "partnershipDesc": "পিতামাতা ও পরিবারের সাথে ঘনিষ্ঠভাবে কাজ করা",
+    "ctaTitle": "আমাদের শিক্ষকদের সাথে ব্যক্তিগতভাবে দেখা করুন",
+    "ctaSubtitle": "আমাদের নিবেদিত শিক্ষক দলের সাথে দেখা করতে এবং তারা কীভাবে জাদুকরী শিক্ষার অভিজ্ঞতা তৈরি করেন তা দেখতে একটি পরিদর্শনের সময় নির্ধারণ করুন।",
+    "scheduleVisit": "পরিদর্শনের সময় নির্ধারণ করুন",
+    "applyAdmission": "ভর্তির জন্য আবেদন করুন",
+    "loading": "আমাদের দুর্দান্ত শিক্ষকদের লোড করা হচ্ছে...",
+    "errorTitle": "শিক্ষকদের তথ্য লোড করতে অক্ষম",
+    "tryAgain": "আবার চেষ্টা করুন",
+    "showingAll": "সব দেখানো হচ্ছে",
+    "teachers": "শিক্ষক"
+  },
+  "teachersCard": {
+    "yearsExperience": "বছর অভিজ্ঞতা",
+    "experiencedTeacher": "অভিজ্ঞ শিক্ষক",
+    "viewDetails": "বিস্তারিত দেখুন"
+  },
   "quickLinks": {
     "title": "দ্রুত লিংক ও সম্পদ",
     "subtitle": "গুরুত্বপূর্ণ সরকারি পোর্টাল, শিক্ষামূলক সম্পদ এবং স্কুল সেবাসমূহে মাত্র এক ক্লিকে প্রবেশ করুন।",
