Internationalize student fees page and update fee data
Refactored the student fees page to use translation keys for all text and fee data, enabling full internationalization. Updated both English and Bengali locale files with detailed fee structure, payment information, and assistance options. Fee values and descriptions are now sourced from translation files, supporting easier updates and localization.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -636,8 +636,96 @@
     "title": "শিক্ষার্থী তথ্য",
     "subtitle": "আমাদের শিক্ষার্থীদের জন্য সম্পদ এবং সেবা",
     "fees": {
-      "title": "ফি কাঠামো",
-      "description": "স্বচ্ছ এবং সাশ্রয়ী ফি কাঠামো"
+      "title": "শিক্ষার্থী ফি",
+      "subtitle": "মানসম্পন্ন প্রাথমিক শিক্ষার জন্য স্বচ্ছ এবং সাশ্রয়ী ফি কাঠামো",
+      "description": "সমস্ত ফি বাংলাদেশী টাকায় (৳)। ফি বার্ষিক পর্যালোচনার সাপেক্ষে।",
+      "monthlyFees": "মাসিক ফি",
+      "admissionFees": "ভর্তি ফি",
+      "additionalFees": "অতিরিক্ত ফি",
+      "paymentMethods": "পেমেন্ট পদ্ধতি",
+      "paymentSchedule": "পেমেন্ট সময়সূচী",
+      "financialAssistance": "আর্থিক সহায়তা উপলব্ধ",
+      "classes": {
+        "play": "প্লে",
+        "nursery": "নার্সারি", 
+        "one": "প্রথম শ্রেণী",
+        "two": "দ্বিতীয় শ্রেণী",
+        "three": "তৃতীয় শ্রেণী",
+        "four": "চতুর্থ শ্রেণী",
+        "five": "পঞ্চম শ্রেণী"
+      },
+      "feeStructure": {
+        "play": {
+          "monthlyFee": "৩০০",
+          "admissionFee": "৫০০"
+        },
+        "nursery": {
+          "monthlyFee": "৩০০", 
+          "admissionFee": "৫০০"
+        },
+        "one": {
+          "monthlyFee": "৪০০",
+          "admissionFee": "৬০০"
+        },
+        "two": {
+          "monthlyFee": "৪০০",
+          "admissionFee": "৬০০"
+        },
+        "three": {
+          "monthlyFee": "৪৫০",
+          "admissionFee": "৭০০"
+        },
+        "four": {
+          "monthlyFee": "৪৫০",
+          "admissionFee": "৮০০"
+        },
+        "five": {
+          "monthlyFee": "৫০০",
+          "admissionFee": "৮০০"
+        }
+      },
+      "paymentInfo": {
+        "methods": {
+          "bankTransfer": {
+            "title": "ব্যাংক ট্রান্সফার",
+            "description": "স্কুল অ্যাকাউন্টে সরাসরি স্থানান্তর"
+          },
+          "cash": {
+            "title": "নগদ পেমেন্ট", 
+            "description": "কার্যদিবসে স্কুল অফিসে প্রদান করুন"
+          },
+          "mobileBanking": {
+            "title": "মোবাইল ব্যাংকিং",
+            "description": "বিকাশ, নগদ, রকেট গ্রহণযোগ্য"
+          }
+        },
+        "schedule": {
+          "monthlyDue": "প্রতি মাসের ১০ তারিখের মধ্যে মাসিক ফি পরিশোধ করতে হবে",
+          "lateFee": "বিলম্ব ফি: ১৫ তারিখের পরে ৳৫০",
+          "siblingDiscount": "ভাইবোন ছাড়: দ্বিতীয় সন্তানের জন্য ১০% ছাড়"
+        }
+      },
+      "assistance": {
+        "title": "আমরা বিশ্বাস করি যে মানসম্পন্ন শিক্ষা সকলের জন্য সহজলভ্য হওয়া উচিত। যোগ্য পরিবারের জন্য সীমিত আর্থিক সহায়তা উপলব্ধ।",
+        "needBased": {
+          "title": "প্রয়োজন ভিত্তিক সহায়তা",
+          "description": "পারিবারিক আয়ের ভিত্তিতে আর্থিক সহায়তা"
+        },
+        "merit": {
+          "title": "মেধা বৃত্তি", 
+          "description": "ব্যতিক্রমী শিক্ষার্থীদের জন্য পুরস্কার"
+        },
+        "paymentPlans": {
+          "title": "পেমেন্ট পরিকল্পনা",
+          "description": "নমনীয় পেমেন্ট ব্যবস্থা উপলব্ধ"
+        }
+      },
+      "contact": {
+        "title": "ফি সম্পর্কে প্রশ্ন?",
+        "subtitle": "আমাদের অর্থ বিভাগ পেমেন্ট বিকল্প নিয়ে আলোচনা করতে এবং আমাদের ফি কাঠামো সম্পর্কে যেকোনো প্রশ্নের উত্তর দিতে উপলব্ধ।",
+        "contactOffice": "অর্থ অফিসে যোগাযোগ করুন",
+        "applyNow": "এখনই আবেদন করুন"
+      }
     },
     "examSchedule": {
       "title": "পরীক্ষার সময়সূচী",
