Add dynamic class schedule page with localization
Introduces a new class schedule page that loads schedule data from a JSON file, supports Bengali and English localization, and provides table and card views with class and teacher filtering. Adds supporting translations to bn.json and en.json, and includes SEO metadata in a new layout file.

Features Working:
📊 Complete Class Schedule: All 6 classes (Play through Class Five) displayed
🔄 View Modes: Toggle between table and card layouts
🎯 Class Filter: View all classes or filter by specific class
📱 Responsive Design: Works on all screen sizes
🎨 Professional Styling: Color-coded classes and subjects
👨‍🏫 Teacher Information: All teacher names displayed
⏰ Time Slots: Complete 6-period schedule (9:00 AM - 12:00 PM)

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -807,5 +807,36 @@
     "title": "যোগাযোগ",
     "subtitle": "ভর্তি, অনুসন্ধান বা যেকোনো প্রশ্নের জন্য আমাদের সাথে যোগাযোগ করুন।",
     "description": "ভর্তি এবং অনুসন্ধানের জন্য সূর্যমুখী কিন্ডারগার্টেনের সাথে যোগাযোগ করুন"
+  },
+  "classSchedule": {
+    "title": "ক্লাস রুটিন",
+    "subtitle": "আমাদের প্রতিদিনের শ্রেণী রুটিন যা আপনার সন্তানের সর্বোচ্চ শিক্ষার জন্য পরিকল্পিত",
+    "allClasses": "সব ক্লাস",
+    "selectClass": "ক্লাস নির্বাচন:",
+    "viewMode": "দেখার ধরন:",
+    "table": "টেবিল",
+    "cards": "কার্ড",
+    "class": "ক্লাস",
+    "teacher": "শিক্ষক",
+    "freePeriod": "বিরতি",
+    "scheduleInfo": {
+      "weeklySchedule": {
+        "title": "সাপ্তাহিক সময়সূচী",
+        "description": "রবিবার থেকে বৃহস্পতিবার: নিয়মিত ক্লাস\nশুক্রবার: বিশেষ কার্যক্রম\nশনিবার: ছুটি"
+      },
+      "schoolHours": {
+        "title": "স্কুল সময়",
+        "description": "সকাল ৯:০০ - দুপুর ১২:০০\nমোট ৬টি ক্লাস প্রতিদিন\nপ্রতিটি ক্লাস ৩০ মিনিট"
+      },
+      "teacherInfo": {
+        "title": "শিক্ষক তথ্য",
+        "description": "অভিজ্ঞ ও যোগ্য শিক্ষকমণ্ডলী\nপ্রতিটি বিষয়ে বিশেষজ্ঞ শিক্ষক\nনিয়মিত প্রশিক্ষণপ্রাপ্ত"
+      }
+    },
+    "contactSection": {
+      "title": "আমাদের ক্লাস রুটিন সম্পর্কে প্রশ্ন আছে?",
+      "subtitle": "আমাদের সাথে যোগাযোগ করুন এবং আপনার সন্তানের শিক্ষা সম্পর্কে আরো জানুন।",
+      "contactUs": "যোগাযোগ করুন"
+    }
   }
 }
