Implement admission page with form, UX, and SEO
Added a fully functional online admission form with age-based class selection, fee display, and comprehensive validation. Introduced bilingual support (English & Bangla) with updated translation files. Enhanced user experience with improved layout, breadcrumbs, next steps, and responsive design. Added SEO optimizations including meta tags, Open Graph, Twitter cards, and structured data in the new layout file. Updated documentation to summarize implementation and UX/SEO improvements.

--- a/src/locales/bn.json
+++ b/src/locales/bn.json
@@ -619,7 +619,155 @@
     },
     "applyOnline": {
       "title": "অনলাইনে আবেদন করুন",
-      "description": "সুবিধার জন্য অনলাইনে আপনার আবেদন জমা দিন"
+      "description": "সুবিধার জন্য অনলাইনে আপনার আবেদন জমা দিন",
+      "breadcrumb": {
+        "home": "হোম",
+        "admission": "ভর্তি",
+        "applyOnline": "অনলাইনে আবেদন করুন"
+      },
+      "hero": {
+        "title": "অনলাইনে আবেদন করুন",
+        "subtitle": "সূর্যমুখী কিন্ডারগার্টেনে ভর্তির জন্য অনলাইনে আপনার আবেদন সম্পূর্ণ করুন।"
+      },
+      "formTitle": "অনলাইন আবেদন ফর্ম",
+      "formSubtitle": "অনুগ্রহ করে সমস্ত প্রয়োজনীয় ক্ষেত্র সাবধানে পূরণ করুন। আপনি আপনার অগ্রগতি সংরক্ষণ করতে এবং পরে ফিরে আসতে পারেন।",
+      "sections": {
+        "studentInfo": "শিক্ষার্থীর তথ্য",
+        "parentInfo": "পিতামাতা/অভিভাবকের তথ্য",
+        "addressInfo": "ঠিকানার তথ্য",
+        "additionalInfo": "অতিরিক্ত তথ্য"
+      },
+      "fields": {
+        "studentName": {
+          "label": "সন্তানের পূর্ণ নাম",
+          "placeholder": "সন্তানের পূর্ণ নাম লিখুন",
+          "error": "অনুগ্রহ করে সন্তানের পূর্ণ নাম লিখুন"
+        },
+        "dateOfBirth": {
+          "label": "জন্ম তারিখ",
+          "placeholder": "জন্ম তারিখ নির্বাচন করুন",
+          "error": "অনুগ্রহ করে একটি বৈধ জন্ম তারিখ নির্বাচন করুন",
+          "ageError": "শিক্ষার্থীর বয়স ৩ থেকে ১৫ বছরের মধ্যে হতে হবে"
+        },
+        "gender": {
+          "label": "লিঙ্গ",
+          "placeholder": "লিঙ্গ নির্বাচন করুন",
+          "options": {
+            "male": "পুরুষ",
+            "female": "মহিলা",
+            "other": "অন্যান্য"
+          },
+          "error": "অনুগ্রহ করে লিঙ্গ নির্বাচন করুন"
+        },
+        "classApplying": {
+          "label": "যে শ্রেণীর জন্য আবেদন করছেন",
+          "placeholder": "শ্রেণী নির্বাচন করুন",
+          "error": "অনুগ্রহ করে একটি শ্রেণী নির্বাচন করুন",
+          "autoSelected": "বয়সের ভিত্তিতে স্বয়ংক্রিয়ভাবে নির্বাচিত"
+        },
+        "parentName": {
+          "label": "প্রধান অভিভাবকের নাম",
+          "placeholder": "প্রধান অভিভাবকের পূর্ণ নাম লিখুন",
+          "error": "অনুগ্রহ করে অভিভাবকের নাম লিখুন"
+        },
+        "fatherName": {
+          "label": "পিতার নাম",
+          "placeholder": "পিতার পূর্ণ নাম লিখুন",
+          "error": "অনুগ্রহ করে পিতার নাম লিখুন"
+        },
+        "motherName": {
+          "label": "মাতার নাম",
+          "placeholder": "মাতার পূর্ণ নাম লিখুন",
+          "error": "অনুগ্রহ করে মাতার নাম লিখুন"
+        },
+        "parentEmail": {
+          "label": "ইমেইল ঠিকানা",
+          "placeholder": "ইমেইল ঠিকানা লিখুন",
+          "error": "অনুগ্রহ করে একটি বৈধ ইমেইল ঠিকানা লিখুন"
+        },
+        "parentPhone": {
+          "label": "প্রধান যোগাযোগ নম্বর",
+          "placeholder": "যোগাযোগ নম্বর লিখুন",
+          "error": "অনুগ্রহ করে একটি বৈধ ফোন নম্বর লিখুন"
+        },
+        "address": {
+          "label": "সম্পূর্ণ ঠিকানা",
+          "placeholder": "সম্পূর্ণ ঠিকানা লিখুন",
+          "error": "অনুগ্রহ করে সম্পূর্ণ ঠিকানা প্রদান করুন"
+        },
+        "city": {
+          "label": "শহর",
+          "placeholder": "শহরের নাম লিখুন",
+          "error": "অনুগ্রহ করে শহরের নাম লিখুন"
+        },
+        "postalCode": {
+          "label": "পোস্টাল কোড",
+          "placeholder": "পোস্টাল কোড লিখুন"
+        },
+        "previousSchool": {
+          "label": "পূর্ববর্তী স্কুল (যদি থাকে)",
+          "placeholder": "পূর্ববর্তী স্কুলের নাম লিখুন"
+        },
+        "specialNeeds": {
+          "label": "বিশেষ চাহিদা বা চিকিৎসা অবস্থা",
+          "placeholder": "অনুগ্রহ করে কোনো বিশেষ চাহিদা বা চিকিৎসা অবস্থা বর্ণনা করুন"
+        },
+        "howDidYouHear": {
+          "label": "আপনি আমাদের স্কুল সম্পর্কে কীভাবে জানলেন?",
+          "placeholder": "একটি বিকল্প নির্বাচন করুন",
+          "options": {
+            "website": "স্কুল ওয়েবসাইট",
+            "socialMedia": "সোশ্যাল মিডিয়া",
+            "friendReferral": "বন্ধু/পরিবার রেফারেল",
+            "advertisement": "বিজ্ঞাপন",
+            "other": "অন্যান্য"
+          }
+        },
+        "termsAccepted": {
+          "label": "আমি এতদ্বারা ঘোষণা করছি যে উপরে প্রদত্ত তথ্য আমার জ্ঞানের সর্বোত্তম অনুযায়ী সত্য এবং সম্পূর্ণ। আমি বুঝি যে কোনো মিথ্যা তথ্য এই আবেদন প্রত্যাখ্যানের কারণ হতে পারে।",
+          "linkText": "আমি সূর্যমুখী কিন্ডারগার্টেনের ভর্তি নীতি এবং শর্তাবলীতে সম্মত।",
+          "error": "আপনাকে অবশ্যই শর্তাবলী গ্রহণ করতে হবে"
+        }
+      },
+      "feeInfo": {
+        "title": "ফি তথ্য",
+        "monthlyFee": "মাসিক ফি",
+        "admissionFee": "ভর্তি ফি",
+        "currency": "৳"
+      },
+      "buttons": {
+        "submit": "আবেদন জমা দিন",
+        "submitting": "জমা দেওয়া হচ্ছে...",
+        "reset": "ফর্ম রিসেট করুন"
+      },
+      "messages": {
+        "success": "আবেদন সফলভাবে জমা দেওয়া হয়েছে!",
+        "successDescription": "আপনার আবেদনের জন্য ধন্যবাদ। আমরা ৩-৫ কার্যদিবসের মধ্যে আপনার সাথে যোগাযোগ করব।",
+        "error": "আবেদন জমা দিতে ব্যর্থ",
+        "errorDescription": "অনুগ্রহ করে আপনার তথ্য পরীক্ষা করুন এবং আবার চেষ্টা করুন।",
+        "validationError": "অনুগ্রহ করে ফর্মের ত্রুটিগুলি সংশোধন করুন"
+      },
+      "nextSteps": {
+        "title": "পরবর্তী কী হবে?",
+        "subtitle": "আপনার অনলাইন আবেদন জমা দেওয়ার পরে, এখানে আপনি কী আশা করতে পারেন।",
+        "steps": [
+          {
+            "icon": "📧",
+            "title": "নিশ্চিতকরণ ইমেইল",
+            "description": "আপনি ২৪ ঘন্টার মধ্যে আপনার আবেদন রেফারেন্স নম্বর সহ একটি নিশ্চিতকরণ ইমেইল পাবেন।"
+          },
+          {
+            "icon": "📞",
+            "title": "স্কুল থেকে যোগাযোগ",
+            "description": "আমাদের ভর্তি দল একটি মূল্যায়ন নির্ধারণ করতে ৩-৫ কার্যদিবসের মধ্যে আপনার সাথে যোগাযোগ করবে।"
+          },
+          {
+            "icon": "✅",
+            "title": "ভর্তি সিদ্ধান্ত",
+            "description": "মূল্যায়নের ২ সপ্তাহের মধ্যে চূড়ান্ত ভর্তি সিদ্ধান্ত জানানো হবে।"
+          }
+        ]
+      }
     },
     "requirements": {
       "title": "প্রয়োজনীয়তা",
